--- a/webroot/index.html
+++ b/webroot/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>示例列表</title>
+    <title>Mountain Hut DEMO</title>
     <style>
         html, body, ul, li, h1, h2, h3, h4, h5 {
             margin: 0;
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-    <h1>three.js 演示示例</h1>
+    <h1>Mountain Hut DEMO</h1>
     <nav>
         <ul class="demo-menu">
             <li>
